# llm-orchestration-framework

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
llm_orchestration_framework/: __init__.py  cli.py
llm_orchestration_framework/api/: __init__.py  schemas.py  server.py
llm_orchestration_framework/core/: __init__.py  agent.py  chain.py  orchestrator.py  registry.py  router.py  task.py
llm_orchestration_framework/memory/: __init__.py  base.py  buffer.py  summary.py
llm_orchestration_framework/providers/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py
tests/: __init__.py  conftest.py  test_framework.py
