[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-orchestration-framework"
version = "0.1.0"
description = "General-purpose LLM orchestration layer — define, chain, route, and escalate agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "dev"},
]
keywords = ["llm", "orchestration", "agents", "ai", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "asgi-lifespan>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/AnaVuko1/llm-orchestration-framework"
Repository = "https://github.com/AnaVuko1/llm-orchestration-framework"
Issues = "https://github.com/AnaVuko1/llm-orchestration-framework/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[project.scripts]
llm-orchestrate = "llm_orchestration_framework.cli:main"